add create secret api, pass api test
